// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render in loading state 1`] = `
<div
  class="autoComplete"
>
  <label
    class="input"
  >
    <div
      class="prependedContainer"
    >
      <div
        class="spinner"
        style="width:20px;height:20px"
      >
        <div
          class="doubleBounce1"
        />
        <div
          class="doubleBounce2"
        />
      </div>
    </div>
    <input
      type="text"
      value=""
    />
  </label>
</div>
`;

exports[`Render with given value 1`] = `
<div
  class="autoComplete"
>
  <label
    class="input"
  >
    <div
      class="prependedContainer"
    >
      <div
        class="spinner"
        style="width:20px;height:20px"
      >
        <div
          class="doubleBounce1"
        />
        <div
          class="doubleBounce2"
        />
      </div>
    </div>
    <input
      type="text"
      value="James Bond"
    />
  </label>
</div>
`;
